[package]
name = "libopcodes-rs"
version = "0.1.3"
edition = "2021"
authors = ["Jos <jos@liblisa.nl>"]
license = "MPL-2.0"
repository = "https://github.com/libLISA/libopcodes-rs"
description = "Rust bindings for libopcodes"

[dependencies]
libopcodes-sys = { version = "0.1.3", path = "../libopcodes-sys" }